--- a/Pipfile
+++ b/Pipfile
@@ -15,10 +15,7 @@ djangorestframework = "*"
 python-dotenv = "*"
 google-generativeai = "*"
 git-filter-repo = "*"
-fastapi = "*"
-pillow = "*"
-pdfkit = "*"
-reportlab = "*"
+gunicorn = "*"
 
 [dev-packages]
 
